--- a/views/resize.html
+++ b/views/resize.html
@@ -15,7 +15,8 @@
     <h2></h2>
     <h3></h3>
     <p></p>
-    
+    <img src="" alt="">
+
     <script type="text/javascript" src="/javascripts/imageUpload.js"></script>
 </body>
 </html>
