--- a/views/resize.html
+++ b/views/resize.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/stylesheets/style.css">
     <title>Document</title>
 </head>
 <body>
@@ -22,6 +23,10 @@
     <h2></h2>
     <h3></h3>
     <p></p>
+
+    <div id="imagelist">
+        
+    </div>
 
     <script type="text/javascript" src="/javascripts/imageUpload.js"></script>
 </body>
