--- a/views/resize.html
+++ b/views/resize.html
@@ -13,6 +13,7 @@
         <input type="file" id="inputFiles" accept="image/*" multiple required/>
         <select name="processing" id="processing" required>
             <option value="" disabled selected>Choose processing</option>
+            <option value="all">All</option>
             <option value="resize">Resize to half</option>
             <option value="grayscale"> Grayscale</option>
             <option value="sharpen">Sharpen</option>
