--- a/views/resize.html
+++ b/views/resize.html
@@ -14,7 +14,7 @@
         <select name="processing" id="processing" required>
             <option value="" disabled selected>Choose processing</option>
             <option value="all">All</option>
-            <option value="grayscale"> Grayscale</option>
+            <option value="greyscale"> Greyscale</option>
             <option value="resize">Resize to half</option>
             <option value="sharpen">Sharpen</option>
             <option value="blur">Blur</option>
