--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -21,3 +21,39 @@ a {
   text-align: center;
   margin: 5% 0;
 }
+
+/* loading */
+#loading{
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 999;
+  width: 100%;
+  height:100%;
+  background: rgba(0,0,0,0.6);
+}
+#loadingletter{
+  color: #fafafa;
+}
+#loading .cv-spinner {
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column
+}
+#loading .spinner {
+  width: 80px;
+  height: 80px;
+  border: 4px #ddd solid;
+  border-top: 4px #3498db solid;
+  border-radius: 50%;
+  animation: sp-anime 0.8s infinite linear;
+}
+@keyframes sp-anime {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(359deg); }
+}
+#loading.is-hide{
+  display:none;
+}
