--- a/views/resize.html
+++ b/views/resize.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Upload Photos</h1>
+    <h1>Image Processer</h1>
     <form id="uploadForm" enctype="multipart/form-data">
         <input type="file" id="inputFiles" accept="image/*" multiple required/>
         <select name="processing" id="processing" required>
